Basic functionality for game added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 1
             </h4>
             <p id = "questionOne"></p>
+            <p class = "reveal" id = "reveal1">Click for Answer</p>
         </div>
 
         <div id = "two">
@@ -22,6 +23,7 @@
                 1
             </h4>
             <p id = "questionTwo"></p>
+            <p class = "reveal" id = "reveal2">Click for Answer</p>
         </div>
 
         <div id = "three">
@@ -29,6 +31,7 @@
                 1
             </h4>
             <p id = "questionThree"></p>
+            <p class = "reveal" id = "reveal3">Click for Answer</p>
         </div>
 
         <div id = "four">
@@ -36,24 +39,29 @@
                 1
             </h4>
             <p id = "questionFour"></p>
+            <p class = "reveal" id = "reveal4">Click for Answer</p>
+
         </div>
         <div id = "five">
             <h4 id = "valueFive">
                 2
             </h4>
             <p id = "questionFive"></p>
+            <p class = "reveal" id = "reveal5">Click for Answer</p>
         </div>
         <div id = "six">
             <h4 id = "valueSix">
                 2
             </h4>
             <p id = "questionSix"></p>
+            <p class = "reveal" id = "reveal6">Click for Answer</p>
         </div>
         <div id = "seven">
             <h4 id = "valueSeven">
                 2
             </h4>
             <p id = "questionSeven"></p>
+            <p class = "reveal" id = "reveal7">Click for Answer</p>
 
         </div>
         <div id = "eight">
@@ -61,12 +69,14 @@
                 2
             </h4>
             <p id = "questionEight"></p>
+            <p class = "reveal" id = "reveal8">Click for Answer</p>
         </div>
         <div id = "nine">
             <h4 id = "valueNine">
                 3
             </h4>
             <p id = "questionNine"></p>
+            <p class = "reveal" id = "reveal9">Click for Answer</p>
 
         </div>
         <div id = "ten">
@@ -74,6 +84,7 @@
                 3
             </h4>
             <p id = "questionTen"></p>
+            <p class = "reveal" id = "reveal10">Click for Answer</p>
    
         </div>
         <div id = "eleven">
@@ -81,6 +92,7 @@
                 3
             </h4>
             <p id = "questionEleven"></p>
+            <p class = "reveal" id = "reveal11">Click for Answer</p>
 
         </div>
         <div id = "tweleve">
@@ -88,6 +100,7 @@
                 3
             </h4>
             <p id = "questionTwelve"></p>
+            <p class = "reveal" id = "reveal12">Click for Answer</p>
 
         </div>
         <div id = "thirteen">
@@ -95,6 +108,7 @@
                 4
             </h4>
             <p id = "questionThirteen"></p>
+            <p class = "reveal" id = "reveal13">Click for Answer</p>
 
         </div>
         <div id = "fourteen">
@@ -102,6 +116,7 @@
                 4
             </h4>
             <p id = "questionFourteen"></p>
+            <p class = "reveal" id = "reveal14">Click for Answer</p>
 
         </div>
         <div id = "fifteen">
@@ -109,12 +124,14 @@
                 4
             </h4>
             <p id = "questionFifteen"></p>
+            <p class = "reveal" id = "reveal15">Click for Answer</p>
         </div>
         <div id = "sixteen">
             <h4 id = "valueSixteen">
                 4
             </h4>
             <p id = "questionSixteen"></p>
+            <p class = "reveal" id = "reveal16">Click for Answer</p>
         </div>
 
     </div>
