made squares rounded and added start new game button

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
     </div>
 
     <div id = "final">CLICK HERE FOR FINAL JEOPARDY</div>
+    <a href="/home/thegibson/jeopardy/index.html"><button id = "new">START NEW GAME</button></a>
 
     <div id="overlay">
             <form action="" id = "overlayForm" onsubmit = "return false">
