--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
 
     <div class="teams">
         <div id = "GIBSONS">
-            <h4 id = "gib" >GIBSONS</h4>
+            <h4 id = "gib" >Team 1</h4>
             <h4 id = "gibsPoints">0</h4>
         </div>
         <div id = "WILLIAMS">
-            <h4 id = "wil" >WILLIAMS</h4>
+            <h4 id = "wil" >Team 2</h4>
             <h4 id = "wilPoints">0</h4>
         </div>
         
         <div id = "GILLIKINS">
-            <h4 id = "gil" >GILLIKINS</h4>
+            <h4 id = "gil" >Team 3</h4>
             <h4 id = "gilPoints">0</h4>
         </div>
     </div>
@@ -150,7 +150,7 @@
     </div>
 
     <div id = "final">CLICK HERE FOR FINAL JEOPARDY</div>
-    <a href="/home/thegibson/jeopardy/index.html"><button id = "new">START NEW GAME</button></a>
+    <a href="/home/thegibson/jeopardy/index.html"><div id = "new">START NEW GAME</div></a>
 
     <div id="overlay">
             <form action="" id = "overlayForm" onsubmit = "return false">
