Corrected link for new game

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
 
     <div id = "final">CLICK HERE FOR FINAL JEOPARDY</div>
-    <a href="/home/thegibson/jeopardy/index.html"><div id = "new">START NEW GAME</div></a>
+    <a href="/jeopardy/index.html"><div id = "new">START NEW GAME</div></a>
 
     <div id="overlay">
             <form action="" id = "overlayForm" onsubmit = "return false">
